Use vertical-align to correct alignment of top tabs
As mentioned earlier, there was trouble with the top tab link text
being aligned by its baseline rather than by the bottom of the
actual tab.  (See 6d72925.)  Using "vertical-align: middle;" seems
to avoid the need for a precise vertical offset.

--- a/esp/esp/themes/theme_data/mit/less/main.less
+++ b/esp/esp/themes/theme_data/mit/less/main.less
@@ -346,26 +346,27 @@ margin-bottom: 10px;
  */
 
 #cross_link {
-position: absolute;
-right: 210px; 
-top: -22px;
-height: 22px;
-line-height: 22px;
-font-size: 0.875em;
-font-weight: bold;
+    position: absolute;
+    right: 210px; 
+    top: -22px;
+    height: 22px;
+    line-height: 22px;
+    font-size: 0.875em;
+    font-weight: bold;
 }
 
 #cross_link a {
-display: inline-block;
-text-align: center;
-padding-left: 0px; 
-width: 94px; 
-border-top-right-radius: @rounding_radius;
-text-decoration: none;
-background-repeat: no-repeat;
-color: #fff;
-font-weight: bold;
-font-variant: small-caps;
+    display: inline-block;
+    text-align: center;
+    padding-left: 0px; 
+    width: 94px; 
+    vertical-align: middle;
+    border-top-right-radius: @rounding_radius;
+    text-decoration: none;
+    background-repeat: no-repeat;
+    color: #fff;
+    font-weight: bold;
+    font-variant: small-caps;
 }
 
 #cross_link .leftedge a {
@@ -379,11 +380,6 @@ font-variant: small-caps;
     border-top-right-radius: 0px;
     margin: 0px;
     top: 0.0em;
-}
-
-#cross_link a {
-    position: relative;
-    top: -0.45em;
 }
 
 #search_box .leftedge {
